Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigBlandWithBadCharacters-45Chomped.calc
a .0E2% b 1.E2% c 2.3E3% d 34.5E4% e 6.78E7% f 99.99E5% g 3E9% h 76E4%